--- a/week01/holygrail.html
+++ b/week01/holygrail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HolyGrail</title>
-    <link rel="stylesheet" href="css/holygrail.css">
+    <link rel="stylesheet" href="styles/holygrail.css">
 </head>
 <body>
     <header>
