--- a/week01/holygrail.html
+++ b/week01/holygrail.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1 contenteditable>Header</h1>
+        <h1 contenteditable>Header.com</h1>
     </header>
     <nav>Main Navigation</nav>
-    <main contenteditable>Main Content</main>
+    <main contenteditable>Main Content Area</main>
     <div class="right-sidebar" contenteditable>Right Sidebar</div>
-    <footer contenteditable>Footer Content</footer>
+    <footer contenteditable>Footer Content - Header.com</footer>
 </body>
 </html>
