media query large no duplicates

--- a/week01/media-query.html
+++ b/week01/media-query.html
@@ -26,7 +26,7 @@
             <p>"...and they did submit cheerfully and with patience to all the will of the Lord."</p>
         </section>
         <footer>
-            [Haley Atkinson]
+            Haley Atkinson
         </footer>
     </main>
 </body>
