--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temp page</title>
+    <title>Haley Atkinson - WDD 230 - Web Frontend Development</title>
+    <meta name="description" content="WDD 230 - Web Frontend Development. Haley Atkinson. Course assignment portal.">
+    <meta name="author" content="Haley Atkinson">
 </head>
 
 <body>
-    <h1>temp page</h1>
+    <header>
+        <img>
+    </header>
+    <nav>
+        <link "Home" , "Chamber" "Site plan" , "Form">
+    </nav>
+    <main>
+        <h1></h1>
+
+    </main>
+    <footer></footer>
 </body>
 
 </html>
