edits to index.html

--- a/index.html
+++ b/index.html
@@ -11,16 +11,35 @@
 
 <body>
     <header>
-        <img>
+        <img src="images/profile.jpg" alt="Profile Picture" width="75" height="100">
     </header>
     <nav>
-        <link "Home" , "Chamber" "Site plan" , "Form">
+        <ul>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Chamber</a></li>
+            <li><a href="#">Site Plan</a></li>
+            <li><a href="#">Form</a></li>
+        </ul>
     </nav>
     <main>
-        <h1></h1>
+        <h1>WDD 230: Web Frontend Development</h1>
+        <section class="card">
+            <h2>Learning Activities</h2>
+            <ul>
 
+            </ul>
+        </section>
+        <section class="card">
+            <h2>Information</h2>
+
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p>©2024 - Haley Atkinson - U.S.A.</p>
+        <p id="Last Modified">insert JS code</p>
+    </footer>
+    <script src="scripts/getDates.js"></script>
 </body>
 
 </html>
