--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Haley Atkinson - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development. Haley Atkinson. Course assignment portal.">
     <meta name="author" content="Haley Atkinson">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="larger.css">
 </head>
 
 <body>
@@ -25,6 +26,7 @@
     </nav>
     <main>
         <h1>WDD 230: Web Frontend Development</h1>
+       
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
@@ -33,6 +35,7 @@
                 <li><a href="#">Week 3 Learning Activity</a></li>
             </ul>
         </section>
+       
         <section class="card">
             <h2>Information</h2>
             <div class="weather"> 
@@ -44,6 +47,7 @@
                 <p>no. visits to page</p>
             </div>
         </section>
+   
     </main>
     <footer>
         <p>&copy; <span id="currentYear"></span> - Haley Atkinson - U.S.A.</p>
