--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Haley Atkinson - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development. Haley Atkinson. Course assignment portal.">
     <meta name="author" content="Haley Atkinson">
-    <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="larger.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
             </div>
             <div class="page visits"> 
                 <h3>Number of Visits:</h3>
-                <p>no. visits to page</p>
+                <p># visits to page</p>
             </div>
         </section>
    
