--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <img src="images/profile.jpg" alt="Profile Picture" width="75" height="100">
+        <h1>Haley W. Atkinson</h1>
     </header>
     <nav>
         <ul>
@@ -26,7 +27,7 @@
     </nav>
     <main>
         <h1>WDD 230: Web Frontend Development</h1>
-       
+
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
@@ -35,19 +36,19 @@
                 <li><a href="#">Week 3 Learning Activity</a></li>
             </ul>
         </section>
-       
+
         <section class="card">
             <h2>Information</h2>
-            <div class="weather"> 
+            <div class="weather">
                 <h3>Weather:</h3>
                 <p>weather info</p>
             </div>
-            <div class="page visits"> 
+            <div class="page visits">
                 <h3>Number of Visits:</h3>
                 <p># visits to page</p>
             </div>
         </section>
-   
+
     </main>
     <footer>
         <p>&copy; <span id="currentYear"></span> - Haley Atkinson - U.S.A.</p>
