--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -39,8 +39,11 @@
         <p>Paragraph Font: Work Sans Light 300</p>
         
         <h2 class="heading">Wireframe</h2>
-        <img src="images/mobile-view.jpg" alt="Chamber Site Plan Wireframe" width="75" height="100">
-        <img src="images/desktop-view.jpg" alt="Chamber Site Plan Wireframe" width="100" height="75">
+        <div class="image-container">
+            <img src="images/mobile-view.jpg" alt="Chamber Site Plan Wireframe Mobile View">
+            <img src="images/desktop-view.jpg" alt="Chamber Site Plan Wireframe Desktop View">
+        </div>
+        
     </main>
     <footer></footer>
 </body>
