--- a/week02/design.html
+++ b/week02/design.html
@@ -37,3 +37,24 @@
     <script src="scripts"></script>
 </body>
 </html>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meaningful Title</title>
+    <meta name="description" content="description of page using keywords">
+    <meta name="author" content="Haley Atkinson">
+    <link rel="stylesheet" href="images/filename">
+</head>
+<body>
+    <header><h1>Meaningful Title</h1></header>
+    <nav></nav>
+    <main></main>
+    <footer>©Haley W. Atkinson | BYU-Idaho | WDD 230 - Spring 2024</footer>
+    <script src="scripts"></script>
+</body>
+</html>
