--- a/week02/design.html
+++ b/week02/design.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-        <marquee behavior="alternate" direction="right">🪲 The Lazy Bug<br>Join us for the ribbon cutting cermony!<br>Friday at 11:00 AM!</marquee>
+        <div class="banner">
+            <p>🪲 The Lazy Bug: Join us for the ribbon cutting cermony! Friday at 11:00 AM!</p>
         <h1>Design Principles</h1>
     </header>
     <main>
