--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>Learning Activities</h2>
             <ul>
                 <li><a href="#">Week 1 Learning Activity</a></li>
-                <li><a href="#">Week 2 Learning Activity</a></li>
+                <li><a href="week02/design.html">Week 2 Learning Activity</a></li>
                 <li><a href="#">Week 3 Learning Activity</a></li>
             </ul>
         </section>
