--- a/week02/design.html
+++ b/week02/design.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="banner">
-            <p>🪲 The Lazy Bug: Join us for the ribbon cutting cermony! Friday at 11:00 AM!</p>
+        <div class="banner">🪲 The Lazy Bug<br>Join us for the ribbon cutting cermony!<br>Friday at 11:00 AM!</div>
         <h1>Design Principles</h1>
     </header>
     <main>
@@ -27,7 +26,7 @@
             <ul>
                 <li>Item 1</li>
                 <li>Item 2</li>
-                <li>Item 3<br><br></li>
+                <li>Item 3</li>
                 <li>Item 4</li>
                 <li>Item 5</li>
             </ul>
