meta tags to index.html, billings.jpg added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
+    <meta property="og:title" content="WDD230 Course Assignment Portal - Haley Atkinson" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/billings.jpg" />
+    <meta property="og:url" content="https://haly14.github.io/wdd230/" />
 </head>
 
 <body>
