create bom.html, link bom.html to homepage

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
             <h2>Learning Activities</h2>
             <ul>
                 <li><a href="#">Week 1 Learning Activity</a></li>
-                <li><a href="week02/design.html">Week 2 Learning Activity</a></li>
-                <li><a href="#">Week 3 Learning Activity</a></li>
+                <li><a href="week02/design.html">Week 2 Learning Activity 2.1: Design</a></li>
+                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/XWwEpbB">Week 2 Learning Activity 2.5: Hambutton</a></li>
+                <li><a href="week02/bom.html">Week 2 Learning Activity 2.5: DOM</a></li>
             </ul>
         </section>
 
