--- a/week02/bom.html
+++ b/week02/bom.html
@@ -6,13 +6,13 @@
     <title>Meaningful Title</title>
     <meta name="description" content="description of page using keywords">
     <meta name="author" content="Haley Atkinson">
-    <link rel="stylesheet" href="images/filename">
+    <link rel="stylesheet" href="styles/bom.css">
 </head>
 <body>
     <header><h1>Page Title - Heading 1</h1></header>
     <nav></nav>
     <main></main>
     <footer>©Haley W. Atkinson | BYU-Idaho | WDD 230 - Spring 2024</footer>
-    <script src="scripts"></script>
+    <script src="scripts/bom.js"></script>
 </body>
 </html>
