--- a/week02/bom.html
+++ b/week02/bom.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="styles/bom.css">
 </head>
 <body>
-    <header><h1>Page Title - Heading 1</h1></header>
+    <header><h1>📖 Book of Mormon - Top 10</h1></header>
     <nav></nav>
-    <main></main>
+    <main>
+        <label for="favchap">Enter Book and Chapter: </label>
+        <input type="text" id="favchap" placeholder="Alma 5">
+        <button type="submit">Add Chapter</button>
+        <ul id="list"></ul>
+    </main>
     <footer>©Haley W. Atkinson | BYU-Idaho | WDD 230 - Spring 2024</footer>
     <script src="scripts/bom.js"></script>
 </body>
