--- a/week02/bom.html
+++ b/week02/bom.html
@@ -12,8 +12,8 @@
     <header><h1>📖 Book of Mormon - Top 10</h1></header>
     <nav></nav>
     <main>
-        <label for="favchap">Enter Book and Chapter: </label>
-        <input type="text" id="favchap" placeholder="Alma 5">
+        <label for="favch">Enter Book and Chapter: </label>
+        <input type="text" id="favch" placeholder="Alma 5">
         <button type="submit">Add Chapter</button>
         <ul id="list"></ul>
     </main>
