create and link normalize.css file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Haley Atkinson - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development. Haley Atkinson. Course assignment portal.">
     <meta name="author" content="Haley Atkinson">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
