first attempt dark mode

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <header>
         <img src="images/profile.jpg" alt="Profile Picture" width="75" height="100">
         <h1>Haley W. Atkinson</h1>
+        <div id="mode">
+            🕶️
+        </div>
     </header>
     <nav>
         <ul>
