--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
         </div>
     </header>
     <nav>
-        <ul>
+        <button id="myButton">&#9776;</button>
+        <ul class="menuLinks">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Chamber</a></li>
-            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="#">Form</a></li>
+            <li><a href="#" title="Chamber">Chamber</a></li>
+            <li><a href="week01/chamber-site-plan.html" title="Site Plan">Site Plan</a></li>
+            <li><a href="#" title="Form">Form</a></li>
         </ul>
     </nav>
     <main>
