actual site plan edited

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chamber of Commerce Site Plan</title>
     <meta name="description" content="WDD 230 - Final Project Site Plan. Haley Atkinson. Chamber Site Plan.">
     <meta name="author" content="Haley Atkinson">
     <link rel="stylesheet" href="styles/siteplan-basic.css">
