check chamber link

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce Site Plan</title>
+    <title>Chamber of Commerce Site</title>
+    <meta name="description" content="description of page using keywords">
+    <meta name="author" content="Haley Atkinson">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.cs">
+    <link rel="stylesheet" href="styles/larger.cs">
+    <link rel="icon" href="favicon.ico">
+    <meta property="og:title" content="Billings Chamber of Commerce Webpage" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="images/billings.jpg" />
+    <meta property="og:url" content="https://haly14.github.io/wdd230/" />
 </head>
+
 <body>
-    
+    <header><h1>Page Title - Heading 1</h1></header>
+    <nav></nav>
+    <main></main>
+    <footer>©Haley W. Atkinson | BYU-Idaho | WDD 230 - Spring 2024</footer>
+    <script src="scripts/filename"></script>
 </body>
+
 </html>
