--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button id="myButton">&#9776;</button>
         <ul class="menuLinks">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#" title="Chamber">Chamber</a></li>
+            <li><a href="chamber/index.html" title="Chamber">Chamber</a></li>
             <li><a href="week01/chamber-site-plan.html" title="Site Plan">Site Plan</a></li>
             <li><a href="#" title="Form">Form</a></li>
         </ul>
