main html for chamber

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Billings Chamber of Commerce Webpage" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="images/billings.jpg" />
-    <meta property="og:url" content="https://haly14.github.io/wdd230/" />
+    <meta property="og:url" content="https://haly14.github.io/wdd230/chamber/index.html" />
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <nav></nav>
     <main></main>
     <footer>©Haley W. Atkinson | BYU-Idaho | WDD 230 - Spring 2024</footer>
-    <script src="scripts/filename"></script>
+    <script src="scripts/chamber.js"></script>
 </body>
 
 </html>
