finished html outline requirements and js getdates/last modified code

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,10 +18,19 @@
 </head>
 
 <body>
-    <header><h1>Page Title - Heading 1</h1></header>
+    <header></header>
     <nav></nav>
-    <main></main>
-    <footer>©Haley W. Atkinson | BYU-Idaho | WDD 230 - Spring 2024</footer>
+    <main>
+        <img src="images/billings.jpg" alt="Hero Image - Billings Rimrocks" width="200" height="100">
+        <a href="https://" class="cta">Click here to join the chamber of commerce!</a>
+        <section class="events"></section>
+        <section class="weather"></section>
+        <section class="spotlights"></section>
+    </main>
+    <footer>
+        <p>&copy; <span id="currentYear"></span> - Haley W. Atkinson - BYU-I WDD230</p>
+        <p id="lastModified"></p>
+    </footer>
     <script src="scripts/chamber.js"></script>
 </body>
 
