--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,7 +28,7 @@
         <section class="spotlights"></section>
     </main>
     <footer>
-        <p>&copy; <span id="currentYear"></span> - Haley W. Atkinson - BYU-I WDD230</p>
+        <p>&copy; <span id="currentYear"></span> - Haley W. Atkinson - WDD 230</p>
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/chamber.js"></script>
