add nav and hambutton to html, add partial base.css

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,15 @@
 
 <body>
     <header></header>
-    <nav></nav>
+    <nav>
+        <button id="myButton">&#9776;</button>
+        <ul class="menuLinks">
+            <li class="active"><a href="chamber/index.html" title="Home">Home</a></li>
+            <li><a href="#" title="Discover">Discover</a></li>
+            <li><a href="#" title="Directory">Directory</a></li>
+            <li><a href="#" title="Join">Join</a></li>
+        </ul>
+    </nav>
     <main>
         <img src="images/billings.jpg" alt="Hero Image - Billings Rimrocks" width="200" height="100">
         <a href="https://" class="cta">Click here to join the chamber of commerce!</a>
