--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav>
         <button id="myButton">&#9776;</button>
         <ul class="menuLinks">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="index.html" title="Home">Home</a></li>
             <li><a href="chamber/index.html" title="Chamber">Chamber</a></li>
             <li><a href="week01/chamber-site-plan.html" title="Site Plan">Site Plan</a></li>
             <li><a href="#" title="Form">Form</a></li>
