fetch data last edited js

--- a/week03/lazyload.html
+++ b/week03/lazyload.html
@@ -21,7 +21,10 @@
         <main>
             <img></img>
         </main>
-        <footer>©Haley W. Atkinson | BYU-Idaho | WDD 230 - Spring 2024</footer>
+        <footer>
+            <p>&copy; <span id="currentYear"></span>©Haley W. Atkinson | BYU-Idaho | WDD 230 - Spring 2024</p>
+            <p id="lastModified"></p>
+        </footer>
     </body>
 
     <script src="scripts/lazyload.js"></script>
