--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/XWwEpbB">Week 2 Learning Activity 2.5: Hambutton</a></li>
                 <li><a href="week02/bom.html">Week 2 Learning Activity 2.5: DOM</a></li>
                 <li><a href="week03/images/landscape.webp">Week 3 Learning Activity 3.1: WebP</a></li>
+                <li><a href="week03/lazyload.html">Week 3 Learning Activity 3.2: Lazy Load</a></li>
             </ul>
         </section>
 
