--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <ul>
                 <li><a href="#">Week 1 Learning Activity</a></li>
                 <li><a href="week02/design.html">Week 2 Learning Activity 2.1: Design</a></li>
-                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/XWwEpbB">Week 2 Learning Activity 2.5: Hambutton</a></li>
+                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/XWwEpbB">Week 2 Learning Activity 2.5:
+                        Hambutton</a></li>
                 <li><a href="week02/bom.html">Week 2 Learning Activity 2.5: DOM</a></li>
                 <li><a href="week03/images/landscape.webp">Week 3 Learning Activity 3.1: WebP</a></li>
                 <li><a href="week03/lazyload.html">Week 3 Learning Activity 3.2: Lazy Load</a></li>
