--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <li><a href="week02/bom.html">Week 2 Learning Activity 2.5: DOM</a></li>
                 <li><a href="week03/images/landscape.webp">Week 3 Learning Activity 3.1: WebP</a></li>
                 <li><a href="week03/lazyload.html">Week 3 Learning Activity 3.2: Lazy Load</a></li>
+                <li><a href="week03/responsive-images.html">Week 3 Learning Activity 3.3: Responsive Images</a></li>
             </ul>
         </section>
 
