link w3 bom3 to homepage

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <li><a href="week03/images/landscape.webp">Week 3 Learning Activity 3.1: WebP</a></li>
                 <li><a href="week03/lazyload.html">Week 3 Learning Activity 3.2: Lazy Load</a></li>
                 <li><a href="week03/responsive-images.html">Week 3 Learning Activity 3.3: Responsive Images</a></li>
+                <li><a href="week03/bom3.html">Week 3 Learning Activity 3.4: Web Storage API</a></li>
             </ul>
         </section>
 
