edits to bom3.js

--- a/week03/bom3.html
+++ b/week03/bom3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meaningful Title</title>
+    <title>BOM Activity Revisit - Week 3</title>
     <meta name="description" content="description of page using keywords">
     <meta name="author" content="Haley Atkinson">
     <link rel="stylesheet" href="styles/bom.css">
