lazyload.html img name edits

--- a/week03/lazyload.html
+++ b/week03/lazyload.html
@@ -20,22 +20,27 @@
         </header>
         <main>
             <picture>
-                <img src="https://placehold.co/400x600/000000/fff" alt="Placeholder Kitten Image" loading="lazy" width="400" height="600">
+                <img src="https://placehold.co/400x600/000000/fff" alt="Placeholder Kitten Image" loading="lazy"
+                    width="400" height="600">
             </picture>
             <picture>
-                <img src="https://placehold.co/400x700/222222/fff" alt="Placeholder Kitten Image" loading="lazy" width="400" height="700">
+                <img src="https://placehold.co/400x700/222222/fff" alt="Placeholder Image" loading="lazy" width="400"
+                    height="700">
             </picture>
             <picture>
-                <img src="https://placehold.co/400x800/444444/fff" alt="Placeholder Kitten Image" loading="lazy" width="400" height="800">
+                <img src="https://placehold.co/400x800/444444/fff" alt="Placeholder Image" loading="lazy" width="400"
+                    height="800">
             </picture>
             <picture>
-                <img src="https://placehold.co/400x650/666666/fff" alt="Placeholder Kitten Image" loading="lazy" width="400" height="650">
+                <img src="https://placehold.co/400x650/666666/fff" alt="Placeholder Image" loading="lazy" width="400"
+                    height="650">
             </picture>
             <picture>
-                <img src="https://placehold.co/400x750/888888/fff" alt="Placeholder Kitten Image" loading="lazy" width="400" height="750">
+                <img src="https://placehold.co/400x750/888888/fff" alt="Placeholder Image" loading="lazy" width="400"
+                    height="750">
             </picture>
             <picture>
-                <img src="https://placehold.co/400x850" alt="Placeholder Kitten Image" loading="lazy" width="400" height="850">
+                <img src="https://placehold.co/400x850" alt="Placeholder Image" loading="lazy" width="400" height="850">
             </picture>
         </main>
         <footer>
