--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <main>
         <h1>WDD 230: Web Frontend Development</h1>
 
+        <picture>
+            <img>
+        </picture>
+
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
