--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <img src="images/profile.jpg" alt="Profile Picture" width="75" height="100">
+        <img src="images/profile.webp" alt="Profile Picture" width="75" height="100">
         <h1>Haley W. Atkinson</h1>
         <div id="mode">
             ☾
@@ -35,19 +35,25 @@
         </ul>
     </nav>
     <main>
+        <div class="hero">
+            <picture>
+                <source srcset="images/hero-temple-small.webp" media="(min-width: 400px)">
+                <source srcset="images/hero-temple-medium.webp" media="(min-width: 960px)">
+                <img src="images/hero-temple-large.webp" alt="billings montana temple hero" width="1200" height="600">
+            </picture>
+            <div class="herolabel">
+                <span>Billings Montana Temple</span>
+            </div>
+        </div>
+        
         <h1>WDD 230: Web Frontend Development</h1>
-
-        <picture>
-            <img>
-        </picture>
 
         <section class="card">
             <h2>Learning Activities</h2>
             <ul>
                 <li><a href="#">Week 1 Learning Activity</a></li>
                 <li><a href="week02/design.html">Week 2 Learning Activity 2.1: Design</a></li>
-                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/XWwEpbB">Week 2 Learning Activity 2.5:
-                        Hambutton</a></li>
+                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/XWwEpbB">Week 2 Learning Activity 2.5: Hambutton</a></li>
                 <li><a href="week02/bom.html">Week 2 Learning Activity 2.5: DOM</a></li>
                 <li><a href="week03/images/landscape2.webp.webp">Week 3 Learning Activity 3.1: WebP</a></li>
                 <li><a href="week03/lazyload.html">Week 3 Learning Activity 3.2: Lazy Load</a></li>
@@ -67,6 +73,10 @@
                 <p># visits to page</p>
             </div>
         </section>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d89038.72284338315!2d-108.64608493065988!3d45.78200955409189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53486f8888fa9d97%3A0x373556d4f179b550!2sBillings%2C%20MT!5e0!3m2!1sen!2sus!4v1719499228453!5m2!1sen!2sus"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
 
     </main>
     <footer>
