--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <span>Billings Montana Temple</span>
             </div>
         </div>
-        
+
         <h1>WDD 230: Web Frontend Development</h1>
 
         <section class="card">
@@ -53,7 +53,8 @@
             <ul>
                 <li><a href="#">Week 1 Learning Activity</a></li>
                 <li><a href="week02/design.html">Week 2 Learning Activity 2.1: Design</a></li>
-                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/XWwEpbB">Week 2 Learning Activity 2.5: Hambutton</a></li>
+                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/XWwEpbB">Week 2 Learning Activity 2.5:
+                        Hambutton</a></li>
                 <li><a href="week02/bom.html">Week 2 Learning Activity 2.5: DOM</a></li>
                 <li><a href="week03/images/landscape2.webp.webp">Week 3 Learning Activity 3.1: WebP</a></li>
                 <li><a href="week03/lazyload.html">Week 3 Learning Activity 3.2: Lazy Load</a></li>
@@ -74,8 +75,10 @@
             </div>
         </section>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d89038.72284338315!2d-108.64608493065988!3d45.78200955409189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53486f8888fa9d97%3A0x373556d4f179b550!2sBillings%2C%20MT!5e0!3m2!1sen!2sus!4v1719499228453!5m2!1sen!2sus"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d89038.72284338315!2d-108.64608493065988!3d45.78200955409189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53486f8888fa9d97%3A0x373556d4f179b550!2sBillings%2C%20MT!5e0!3m2!1sen!2sus!4v1719499228453!5m2!1sen!2sus"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
         </iframe>
 
     </main>
