num visits js, css edits

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             <h2>Information</h2>
             <div class="weather">
                 <h3>Weather:</h3>
-                <p>weather info</p>
+                <span>weather info</span>
             </div>
             <div class="page visits">
                 <h3>Number of Visits:</h3>
-                <p># visits to page</p>
+                <span class="visits"># visits to page</span>
             </div>
         </section>
 
