--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                 <h3>Weather:</h3>
                 <span>weather info</span>
             </div>
-            <div class="page visits">
+            <div class="page-visits">
                 <h3>Number of Visits:</h3>
-                <span class="visits"># visits to page</span>
+                <span class="visits"></span>
             </div>
         </section>
 
