finish css edits to span tags

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2>Information</h2>
             <div class="weather">
                 <h3>Weather:</h3>
-                <span>weather info</span>
+                <span class="weather">weather info</span>
             </div>
             <div class="page-visits">
                 <h3>Number of Visits:</h3>
@@ -83,7 +83,7 @@
 
     </main>
     <footer>
-        <p>&copy; <span id="currentYear"></span> - Haley Atkinson - U.S.A.</p>
+        <p>&copy; <span class="currentYear" id="currentYear"></span> - Haley Atkinson - U.S.A.</p>
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getDates.js"></script>
