hambutton for chamber site

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,11 +54,11 @@
         </section>
         <section class="card">
             <h2>Current Billings Weather</h2>
-            <span>weather info</span>
+            <p>weather info</p>
         </section>
         <section class="card">
             <h2>Shop Local! Business Spotlights</h2>
-            <span>local businesses</span>
+            <p>local businesses</p>
         </section>
     </main>
 
