small edits based on validations

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Billings Chamber of Commerce Webpage" />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="webpage" />
     <meta property="og:image" content="images/billings.jpg" />
     <meta property="og:url" content="https://haly14.github.io/wdd230/chamber/index.html" />
 </head>
 
 <body>
     <header>
-        <img src="images/montana.webp" alt="Chamber Logo" width="100" height="100">
+        <img src="images/montana.png" alt="Chamber Logo" width="100" height="100">
         <h1>Billings Chamber of Commerce</h1>
     </header>
 
@@ -36,12 +36,12 @@
     <main>
         <div class="hero">
             <picture>
-                <source srcset="" media="(min-width: 400px)">
-                <source srcset="" media="(min-width: 960px)">
+                <!--<source srcset="" media="(min-width: 400px)">
+                <source srcset="" media="(min-width: 960px)">-->
                 <img src="images/billings.jpg" alt="Hero Image - Billings Rimrocks" width="1200" height="952">
             </picture>
             <div class="herolabel">
-                <span><a href="https://" class="cta">Click here to join the chamber of commerce!</a></span>
+                <span><a href="" class="cta">Click here to join the chamber of commerce!</a></span>
             </div>
         </div>
         <section class="card">
