--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Billings Chamber of Commerce Webpage" />
-    <meta property="og:type" content="webpage" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="images/billings.jpg" />
     <meta property="og:url" content="https://haly14.github.io/wdd230/chamber/index.html" />
 </head>
@@ -66,7 +66,7 @@
         <p>&copy; <span id="currentYear"></span> - Haley W. Atkinson - WDD 230</p>
         <p id="lastModified"></p>
     </footer>
-    
+
     <script src="scripts/chamber.js"></script>
 </body>
 
