begin discovery page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -27,38 +27,28 @@
         <button id="myButton">&#9776;</button>
         <ul class="menuLinks">
             <li class="active"><a href="chamber/index.html" title="Home">Home</a></li>
-            <li><a href="chamber/discover.html" title="Discover">Discover</a></li>
+            <li><a href="#" title="Discover">Discover</a></li>
             <li><a href="#" title="Directory">Directory</a></li>
             <li><a href="#" title="Join">Join</a></li>
         </ul>
     </nav>
 
     <main>
-        <div class="hero">
-            <picture>
-                <!--<source srcset="" media="(min-width: 400px)">
-                <source srcset="" media="(min-width: 960px)">-->
-                <img src="images/billings.jpg" alt="Hero Image - Billings Rimrocks" width="1200" height="952">
-            </picture>
-            <div class="herolabel">
-                <span><a href="" class="cta">Click here to join the chamber of commerce!</a></span>
-            </div>
-        </div>
         <section class="card">
-            <h2>Upcoming Events</h2>
-            <ul>
-                <li><a href="#">52nd Annual Symphony in the Park</a></li>
-                <li><a href="#">Yellowstone Valley Farmer's Market</a></li>
-                <li><a href="#">Alberta Bair Theater: Swan Lake</a></li>
-            </ul>
+            <h2>Heading 2</h2>
+            <p>Paragraph</p>
         </section>
         <section class="card">
-            <h2>Current Billings Weather</h2>
-            <p>weather info</p>
+            <h2>Heading 2</h2>
+            <p>Paragraph</p>
         </section>
         <section class="card">
-            <h2>Shop Local! Business Spotlights</h2>
-            <p>local businesses</p>
+            <h2>Heading 2</h2>
+            <p>Paragraph</p>
+        </section>
+        <section class="card">
+            <h2>Heading 2</h2>
+            <p>Paragraph</p>
         </section>
     </main>
 
