images and image headings/captions

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,22 +33,72 @@
         </ul>
     </nav>
 
-    <main>
-        <section class="card">
-            <h2>Heading 2</h2>
-            <p>Paragraph</p>
+    <main class="discover">
+        <section class="card2 sidebar">
+            <h2>Sidebar 1</h2>
+            <p>sidebar content</p>
         </section>
-        <section class="card">
-            <h2>Heading 2</h2>
-            <p>Paragraph</p>
+        <section class="card2 image">
+            <h2>Billings Rimrocks</h2>
+            <picture>
+                <img src="images/montana-black.png" alt="Discover Image 1: Rimrocks" width="auto" height="300">
+            </picture>
+            <p>The Rimrocks (pictured on the homepage) are the iconic pride of Billings. Nicknamed "the Rims", these natural sandstone cliffs divide the "Heights" (one section of the city) from the "West End" and Downtown.</p>
         </section>
-        <section class="card">
-            <h2>Heading 2</h2>
-            <p>Paragraph</p>
+        <section class="card2 sidebar">
+            <h2>Sidebar 2</h2>
+            <p>sidebar content</p>
         </section>
-        <section class="card">
-            <h2>Heading 2</h2>
-            <p>Paragraph</p>
+        <section class="card2 image">
+            <h2>Yellowstone River</h2>
+            <picture>
+                <img src="images/montana-black.png" alt="Discover Image 2: Yellowstone River" width="auto" height="300">
+            </picture>
+            <p>The Yellowstone River was vital to the original settlement of the Billings area. Years later, it continues to provide water for surrounding agricultural land and is a popular spot for fishing, rafting, camping, and in slow sections, swimming.</p>
+        </section>
+        <section class="card2 sidebar">
+            <h2>Sidebar 3</h2>
+            <p>sidebar content</p>
+        </section>
+        <section class="card2 image">
+            <h2>Pictograph Cave State Park</h2>
+            <picture>
+                <img src="images/montana-black.png" alt="Discover Image 3: Pictograph Caves" width="auto" height="300">
+            </picture>
+            <p>Pictograph Cave State Park is a unique National Historic Landmark located just east of Billings. The Pictograph Caves have been well-preserved, and even today you can view rock art and ancient artifacts that date back thousands of years.</p>
+        </section>
+        <section class="card2 sidebar">
+            <h2>Sidebar 4</h2>
+            <p>sidebar content</p>
+        </section>
+        <section class="card2 image">
+            <h2>Lake Elmo State Park</h2>
+            <picture>
+                <img src="images/montana-black.png" alt="Discover Image 4: Lake Elmo" width="auto" height="300">
+            </picture>
+            <p>Lake Elmo State Park is a popular place for residents of Billings in the summer months when the weather permits swimming. However, you can find Billings natives enjoying the park's walking trails year-round. You might even see some ice fishing in the winter!</p>
+        </section>
+        <section class="card2 sidebar">
+            <h2>Sidebar 5</h2>
+            <p>sidebar content</p>
+        </section>
+        <section class="card2 image">
+            <h2>Shiloh Conservation Area</h2>
+            <picture>
+                <img src="images/montana-black.png" alt="Discover Image 5 : Shiloh Conservation Area" width="auto" height="300">
+            </picture>
+            <p>As Billings expands to the south and west, a number of new conservation areas have been created in the last 20 years. The Shiloh Conservation Area boasts well-maintained walking trails, a picturesque pond, a gazebo, and plentiful wildlife.</p>
+        </section>
+        <section class="card2 sidebar">
+            <h2>Sidebar 6</h2>
+            <p>sidebar content</p>
+        </section>
+        <section class="card2 image">
+            <h2>Phipps Park</h2>
+            <picture>
+                <img src="images/montana-black.png" alt="Discover Image 6: Phipps Park" width="auto" height="300">
+            </picture>
+            <p>Phipps Park is a popular site for everything from hiking to taking family pictures to frisbee golfing! One of the most challenging and unique frisbee golf (folf) courses in the region, the Phipps Park course requires folfers to throw their frisbees up, down, and across the sandstone cliffs.</p>
         </section>
     </main>
 
