--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,7 +53,7 @@
             </ul>
         </section>
         <section class="card">
-            <h2>Current Billings Weather</h2>
+            <h2>Current Weather in Billings</h2>
             <p>weather info</p>
         </section>
         <section class="card">
