fix links to/from index/discover, work on sidebar content

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,8 +26,8 @@
     <nav>
         <button id="myButton">&#9776;</button>
         <ul class="menuLinks">
-            <li class="active"><a href="chamber/index.html" title="Home">Home</a></li>
-            <li><a href="#" title="Discover">Discover</a></li>
+            <li><a href="index.html" title="Home">Home</a></li>
+            <li class="active"><a href="discover.html" title="Discover">Discover</a></li>
             <li><a href="#" title="Directory">Directory</a></li>
             <li><a href="#" title="Join">Join</a></li>
         </ul>
@@ -48,8 +48,15 @@
                 Downtown.</p>
         </section>
         <section class="card2 sidebar">
-            <h2>Sidebar 2</h2>
-            <p>sidebar content</p>
+            <h2>Demographics</h2>
+            <p>
+                Population: 120,864<br>
+                Race/Ethnicity: 86.9% Caucasian, 7.1% Hispanic, 4.3% American Indian, 1.7% other<br>
+                Veterans: 8,401<br>
+                Households: 49,228. Persons per household: 2.32<br>
+                Households with a computer: 94.1%. Households with Internet: 89.2%<br>
+
+            </p>
         </section>
         <section class="card2 image">
             <h2>Yellowstone River</h2>
