--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,8 +26,8 @@
     <nav>
         <button id="myButton">&#9776;</button>
         <ul class="menuLinks">
-            <li class="active"><a href="chamber/index.html" title="Home">Home</a></li>
-            <li><a href="chamber/discover.html" title="Discover">Discover</a></li>
+            <li class="active"><a href="index.html" title="Home">Home</a></li>
+            <li><a href="discover.html" title="Discover">Discover</a></li>
             <li><a href="#" title="Directory">Directory</a></li>
             <li><a href="#" title="Join">Join</a></li>
         </ul>
