--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -40,8 +40,8 @@
         <section class="card2 image">
             <h2>Billings Rimrocks</h2>
             <picture>
-                <img class="hover" src="images/rimrocks.webp" alt="Discover Image 1: Rimrocks" width="auto"
-                    height="auto" loading="lazy">
+                <img class="hover" src="images/rimrocks.webp" alt="Discover Image 1: Rimrocks" width="500"
+                    height="300" loading="lazy">
             </picture>
             <p>The Rimrocks (pictured on the homepage) are the iconic pride of Billings. Nicknamed "the Rims", these
                 natural sandstone cliffs divide the "Heights" (one section of the city) from the "West End" and
@@ -58,8 +58,8 @@
         <section class="card2 image">
             <h2>Yellowstone River</h2>
             <picture>
-                <img class="hover" src="images/yellowstone-river.webp" alt="Discover Image 2: Yellowstone River" width="auto"
-                    height="auto" loading="lazy">
+                <img class="hover" src="images/yellowstone-river.webp" alt="Discover Image 2: Yellowstone River"
+                    width="500" height="300" loading="lazy">
             </picture>
             <p>The Yellowstone River was vital to the original settlement of the Billings area. Years later, it
                 continues to provide water for surrounding agricultural land and is a popular spot for fishing, rafting,
@@ -72,8 +72,8 @@
         <section class="card2 image">
             <h2>Pictograph Cave State Park</h2>
             <picture>
-                <img class="hover" src="images/pictograph-cave.webp" alt="Discover Image 3: Pictograph Caves" width="auto"
-                    height="auto" loading="lazy">
+                <img class="hover" src="images/pictograph-cave.webp" alt="Discover Image 3: Pictograph Caves"
+                    width="500" height="300" loading="lazy">
             </picture>
             <p>Pictograph Cave State Park is a unique National Historic Landmark located just east of Billings. The
                 Pictograph Caves have been well-preserved, and even today you can view rock art and ancient artifacts
@@ -86,8 +86,8 @@
         <section class="card2 image">
             <h2>Lake Elmo State Park</h2>
             <picture>
-                <img class="hover" src="images/lake-elmo.webp" alt="Discover Image 4: Lake Elmo" width="auto"
-                    height="auto" loading="lazy">
+                <img class="hover" src="images/lake-elmo.webp" alt="Discover Image 4: Lake Elmo" width="500"
+                    height="300" loading="lazy">
             </picture>
             <p>Lake Elmo State Park is a popular place for residents of Billings in the summer months when the weather
                 permits swimming. However, you can find Billings natives enjoying the park's walking trails year-round.
@@ -100,8 +100,8 @@
         <section class="card2 image">
             <h2>Shiloh Conservation Area</h2>
             <picture>
-                <img class="hover" src="images/shiloh-conservation.webp" alt="Discover Image 5 : Shiloh Conservation Area"
-                    width="auto" height="auto" loading="lazy">
+                <img class="hover" src="images/shiloh-conservation.webp"
+                    alt="Discover Image 5 : Shiloh Conservation Area" width="500" height="300" loading="lazy">
             </picture>
             <p>As Billings expands to the south and west, a number of new conservation areas have been created in the
                 last 20 years. The Shiloh Conservation Area boasts well-maintained walking trails, a picturesque pond, a
@@ -114,8 +114,8 @@
         <section class="card2 image">
             <h2>Phipps Park</h2>
             <picture>
-                <img class="hover" src="images/phipps-park.webp" alt="Discover Image 6: Phipps Park" width="auto"
-                    height="auto" loading="lazy">
+                <img class="hover" src="images/phipps-park.webp" alt="Discover Image 6: Phipps Park" width="500"
+                    height="300" loading="lazy">
             </picture>
             <p>Phipps Park is a popular site for everything from hiking to taking family pictures to frisbee golfing!
                 One of the most challenging and unique frisbee golf (folf) courses in the region, the Phipps Park course
