convert billings img from jpg to webp

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Billings Chamber of Commerce Webpage" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/billings.jpg" />
+    <meta property="og:image" content="images/billings.webp" />
     <meta property="og:url" content="https://haly14.github.io/wdd230/chamber/index.html" />
 </head>
 
@@ -38,7 +38,7 @@
             <picture>
                 <!--<source srcset="" media="(min-width: 400px)">
                 <source srcset="" media="(min-width: 960px)">-->
-                <img src="images/billings.jpg" alt="Hero Image - Billings Rimrocks" width="1200" height="952">
+                <img src="images/billings.webp" alt="Hero Image - Billings Rimrocks" width="1200" height="952">
             </picture>
             <div class="herolabel">
                 <span><a href="" class="cta">Click here to join the chamber of commerce!</a></span>
