--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce Site</title>
+    <title>Chamber of Commerce Site: Discover Page</title>
     <meta name="description" content="Billings Chamber of Commerce Website">
     <meta name="author" content="Haley Atkinson">
     <link rel="stylesheet" href="styles/normalize.css">
@@ -13,7 +13,7 @@
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Billings Chamber of Commerce Webpage" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/billings.jpg" />
+    <meta property="og:image" content="images/billings.webp" />
     <meta property="og:url" content="https://haly14.github.io/wdd230/chamber/index.html" />
 </head>
 
