--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 <li><a href="week03/lazyload.html">Week 3 Learning Activity 3.2: Lazy Load</a></li>
                 <li><a href="week03/responsive-images.html">Week 3 Learning Activity 3.3: Responsive Images</a></li>
                 <li><a href="week03/bom3.html">Week 3 Learning Activity 3.4: Web Storage API</a></li>
-                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/xxNvZev">Week 4 Learning Activity 4.1: CSS Psuedo-classes</a></li>
+                <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/xxNvZev">Week 4 Learning Activity 4.1:
+                        CSS Psuedo-classes</a></li>
                 <li><a href="week04/images/css-combinators.jpg">Week 4 Learning Activity 4.2: CSS Combinators</a></li>
             </ul>
         </section>
@@ -91,7 +92,7 @@
         <p>&copy; <span class="currentYear" id="currentYear"></span> - Haley Atkinson - U.S.A.</p>
         <p id="lastModified"></p>
     </footer>
-    
+
     <script src="scripts/getDates.js"></script>
 </body>
 
