attach tablebuild to html

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <li><a href="https://codepen.io/Haley-Atkinson-the-builder/pen/xxNvZev">Week 4 Learning Activity 4.1:
                         CSS Psuedo-classes</a></li>
                 <li><a href="week04/images/css-combinators.jpg">Week 4 Learning Activity 4.2: CSS Combinators</a></li>
+                <li><a href="week04/tablebuild.html">Week 4 Learning Activity 4.3: HTML Tables</a></li>
             </ul>
         </section>
 
