--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                         CSS Psuedo-classes</a></li>
                 <li><a href="week04/images/css-combinators.jpg">Week 4 Learning Activity 4.2: CSS Combinators</a></li>
                 <li><a href="week04/tablebuild.html">Week 4 Learning Activity 4.3: HTML Tables</a></li>
+                <li><a href="week04/form-start/index.html">Week 4 Learning Activity 4.4: HTML Forms</a></li>
             </ul>
         </section>
 
