--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li class="active"><a href="index.html" title="Home">Home</a></li>
             <li><a href="chamber/index.html" title="Chamber">Chamber</a></li>
             <li><a href="week01/chamber-site-plan.html" title="Site Plan">Site Plan</a></li>
-            <li><a href="#" title="Form">Form</a></li>
+            <li><a href="form.html" title="Form">Form</a></li>
         </ul>
     </nav>
 
