--- a/week04/form-start/index.html
+++ b/week04/form-start/index.html
@@ -54,7 +54,7 @@
             <fieldset>
                 <legend>Applicant Information</legend>
                 <label>First Name* <input type="text" name="fname" required></label>
-                <label>First Name* <input type="text" name="lname" required></label>
+                <label>Last Name* <input type="text" name="lname" required></label>
                 <label>Phone <input type="tel" name="phone" placeholder="1235551234"></label>
                 <label>Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
                 <label>Website <input type="url" name="url" placeholder="http://"></label>
@@ -96,8 +96,6 @@
             <input type="submit" value="Propose My Course">
 
         </form>
-
-
 
     </main>
 
